--- a/RTBEngineEditor/RTBEngineEditor.vcxproj
+++ b/RTBEngineEditor/RTBEngineEditor.vcxproj
@@ -95,12 +95,14 @@ xcopy /y /d /e /i "$(ProjectDir)RTBEngine_SDK\Default" "$(OutDir)Default"</Comma
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\UI\EditorLayer.cpp" />
     <ClCompile Include="Source\UI\MainMenuBar.cpp" />
+    <ClCompile Include="Source\UI\Panels\SceneHierarchyPanel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Core\EditorApplication.h" />
     <ClInclude Include="Source\UI\EditorLayer.h" />
     <ClInclude Include="Source\UI\MainMenuBar.h" />
     <ClInclude Include="Source\UI\Panels\EditorPanel.h" />
+    <ClInclude Include="Source\UI\Panels\SceneHierarchyPanel.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
