--- a/RTBEngineEditor/imgui.ini
+++ b/RTBEngineEditor/imgui.ini
@@ -18,6 +18,14 @@ Pos=74,46
 Size=347,433
 Collapsed=0
 
+[Window][Hierarchy]
+Pos=8,30
+Size=306,755
+Collapsed=0
+DockId=0x00000001,0
+
 [Docking][Data]
-DockSpace ID=0xBAD6048D Window=0x079D3A04 Pos=8,53 Size=1520,755 CentralNode=1
+DockSpace   ID=0xBAD6048D Window=0x079D3A04 Pos=8,53 Size=1520,755 Split=X
+  DockNode  ID=0x00000001 Parent=0xBAD6048D SizeRef=306,793 Selected=0xBABDAE5E
+  DockNode  ID=0x00000002 Parent=0xBAD6048D SizeRef=1228,793 CentralNode=1
 
