--- a/RTBEngineEditor/imgui.ini
+++ b/RTBEngineEditor/imgui.ini
@@ -24,8 +24,16 @@ Size=306,755
 Collapsed=0
 DockId=0x00000001,0
 
+[Window][Inspector]
+Pos=1282,30
+Size=246,755
+Collapsed=0
+DockId=0x00000004,0
+
 [Docking][Data]
-DockSpace   ID=0xBAD6048D Window=0x079D3A04 Pos=8,53 Size=1520,755 Split=X
-  DockNode  ID=0x00000001 Parent=0xBAD6048D SizeRef=306,793 Selected=0xBABDAE5E
-  DockNode  ID=0x00000002 Parent=0xBAD6048D SizeRef=1228,793 CentralNode=1
+DockSpace     ID=0xBAD6048D Window=0x079D3A04 Pos=8,53 Size=1520,755 Split=X
+  DockNode    ID=0x00000001 Parent=0xBAD6048D SizeRef=306,793 Selected=0xBABDAE5E
+  DockNode    ID=0x00000002 Parent=0xBAD6048D SizeRef=1212,793 Split=X
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=964,793 CentralNode=1
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=246,793 Selected=0x36DC96AB
 
