--- a/RTBEngineEditor/imgui.ini
+++ b/RTBEngineEditor/imgui.ini
@@ -14,9 +14,10 @@ Size=1536,793
 Collapsed=0
 
 [Window][Content Browser]
-Pos=74,46
-Size=347,433
+Pos=316,547
+Size=964,238
 Collapsed=0
+DockId=0x00000006,0
 
 [Window][Hierarchy]
 Pos=8,30
@@ -31,9 +32,11 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace     ID=0xBAD6048D Window=0x079D3A04 Pos=8,53 Size=1520,755 Split=X
-  DockNode    ID=0x00000001 Parent=0xBAD6048D SizeRef=306,793 Selected=0xBABDAE5E
-  DockNode    ID=0x00000002 Parent=0xBAD6048D SizeRef=1228,793 Split=X
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=980,793 CentralNode=1
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=246,793 Selected=0x36DC96AB
+DockSpace       ID=0xBAD6048D Window=0x079D3A04 Pos=8,53 Size=1520,755 Split=X
+  DockNode      ID=0x00000001 Parent=0xBAD6048D SizeRef=306,793 Selected=0xBABDAE5E
+  DockNode      ID=0x00000002 Parent=0xBAD6048D SizeRef=1228,793 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=980,793 Split=Y
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=980,553 CentralNode=1
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=980,238 Selected=0x3DF3100E
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=246,793 Selected=0x36DC96AB
 
