--- a/RTBEngineEditor/imgui.ini
+++ b/RTBEngineEditor/imgui.ini
@@ -15,7 +15,7 @@ Collapsed=0
 
 [Window][Content Browser]
 Pos=316,547
-Size=964,238
+Size=903,238
 Collapsed=0
 DockId=0x00000006,0
 
@@ -26,23 +26,29 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Inspector]
-Pos=1282,30
-Size=246,755
+Pos=1221,30
+Size=307,755
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Console]
 Pos=316,547
-Size=964,238
+Size=903,238
 Collapsed=0
 DockId=0x00000006,1
+
+[Window][Scene]
+Pos=316,30
+Size=903,515
+Collapsed=0
+DockId=0x00000005,0
 
 [Docking][Data]
 DockSpace       ID=0xBAD6048D Window=0x079D3A04 Pos=8,53 Size=1520,755 Split=X
   DockNode      ID=0x00000001 Parent=0xBAD6048D SizeRef=306,793 Selected=0xBABDAE5E
   DockNode      ID=0x00000002 Parent=0xBAD6048D SizeRef=1228,793 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=980,793 Split=Y
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=980,553 CentralNode=1
-      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=980,238 Selected=0xEA83D666
-    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=246,793 Selected=0x36DC96AB
+    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=919,793 Split=Y
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=919,553 CentralNode=1 Selected=0xE601B12F
+      DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=919,238 Selected=0xEA83D666
+    DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=307,793 Selected=0x36DC96AB
 
