Play and stop buttons

--- a/RTBEngineEditor/RTBEngineEditor.vcxproj
+++ b/RTBEngineEditor/RTBEngineEditor.vcxproj
@@ -101,6 +101,8 @@ xcopy /y /d /e /i "$(ProjectDir)RTBEngine_SDK\Default" "$(OutDir)Default"</Comma
     <ClCompile Include="Source\UI\Panels\SceneHierarchyPanel.cpp" />
     <ClCompile Include="Source\UI\Panels\ConsolePanel.cpp" />
     <ClCompile Include="Source\UI\Panels\SceneViewPanel.cpp" />
+    <ClCompile Include="Source\UI\Panels\ToolbarPanel.cpp" />
+    <ClCompile Include="Source\UI\Panels\GameViewPanel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Core\EditorApplication.h" />
@@ -113,6 +115,8 @@ xcopy /y /d /e /i "$(ProjectDir)RTBEngine_SDK\Default" "$(OutDir)Default"</Comma
     <ClInclude Include="Source\UI\Panels\SceneHierarchyPanel.h" />
     <ClInclude Include="Source\UI\Panels\ConsolePanel.h" />
     <ClInclude Include="Source\UI\Panels\SceneViewPanel.h" />
+    <ClInclude Include="Source\UI\Panels\ToolbarPanel.h" />
+    <ClInclude Include="Source\UI\Panels\GameViewPanel.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
