--- a/RTBEngineEditor/imgui.ini
+++ b/RTBEngineEditor/imgui.ini
@@ -62,7 +62,7 @@ DockSpace         ID=0xBAD6048D Window=0x079D3A04 Pos=8,53 Size=1520,755 Split=Y
     DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=306,744 Selected=0xBABDAE5E
     DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1228,744 Split=X
       DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=919,744 Split=Y
-        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=919,519 CentralNode=1 Selected=0xD1EB2482
+        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=919,519 CentralNode=1 Selected=0xE601B12F
         DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=919,223 Selected=0x3DF3100E
       DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=307,744 Selected=0x36DC96AB
 
