--- a/RTBEngineEditor/RTBEngineEditor.vcxproj.filters
+++ b/RTBEngineEditor/RTBEngineEditor.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Source\UI\Panels\GameViewPanel.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Source\UI\Modals\AssetBrowserModal.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Core\EditorApplication.h">
@@ -90,6 +93,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="Source\UI\DragDropPayloads.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\UI\Modals\AssetBrowserModal.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
