--- a/RTBEngineEditor/imgui.ini
+++ b/RTBEngineEditor/imgui.ini
@@ -55,6 +55,11 @@ Size=903,481
 Collapsed=0
 DockId=0x00000007,1
 
+[Window][Select Asset]
+Pos=468,196
+Size=600,400
+Collapsed=0
+
 [Docking][Data]
 DockSpace         ID=0xBAD6048D Window=0x079D3A04 Pos=8,53 Size=1520,755 Split=Y
   DockNode        ID=0x00000001 Parent=0xBAD6048D SizeRef=1536,47 Selected=0x0C01D6D5
