--- a/RTBEngineEditor/imgui.ini
+++ b/RTBEngineEditor/imgui.ini
@@ -60,6 +60,16 @@ Pos=468,196
 Size=600,400
 Collapsed=0
 
+[Window][Build Settings]
+Pos=746,405
+Size=428,198
+Collapsed=0
+
+[Window][Build Result]
+Pos=910,464
+Size=99,80
+Collapsed=0
+
 [Docking][Data]
 DockSpace         ID=0xBAD6048D Window=0x079D3A04 Pos=8,53 Size=1904,971 Split=Y
   DockNode        ID=0x00000001 Parent=0xBAD6048D SizeRef=1920,60 Selected=0x0C01D6D5
@@ -68,6 +78,6 @@ DockSpace         ID=0xBAD6048D Window=0x079D3A04 Pos=8,53 Size=1904,971 Split=Y
     DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1535,947 Split=X
       DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=1149,947 Split=Y
         DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=1149,661 CentralNode=1 Selected=0xE601B12F
-        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=1149,284 Selected=0x3DF3100E
+        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=1149,284 Selected=0xEA83D666
       DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=384,947 Selected=0x36DC96AB
 
