--- a/RTBEngineEditor/imgui.ini
+++ b/RTBEngineEditor/imgui.ini
@@ -10,48 +10,48 @@ Collapsed=0
 
 [Window][MainDockSpace]
 Pos=0,0
-Size=1920,1009
+Size=1536,793
 Collapsed=0
 
 [Window][Content Browser]
-Pos=393,717
-Size=1133,284
+Pos=316,562
+Size=903,223
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Hierarchy]
-Pos=8,92
-Size=383,909
+Pos=8,79
+Size=306,706
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Inspector]
-Pos=1528,92
-Size=384,909
+Pos=1221,79
+Size=307,706
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Console]
-Pos=393,717
-Size=1133,284
+Pos=316,562
+Size=903,223
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][Scene]
-Pos=393,92
-Size=1133,623
+Pos=316,79
+Size=903,481
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Toolbar]
 Pos=8,30
-Size=1904,60
+Size=1520,47
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Game]
-Pos=393,92
-Size=1133,623
+Pos=316,79
+Size=903,481
 Collapsed=0
 DockId=0x00000007,1
 
@@ -71,13 +71,13 @@ Size=99,80
 Collapsed=0
 
 [Docking][Data]
-DockSpace         ID=0xBAD6048D Window=0x079D3A04 Pos=8,53 Size=1904,971 Split=Y
-  DockNode        ID=0x00000001 Parent=0xBAD6048D SizeRef=1920,60 Selected=0x0C01D6D5
-  DockNode        ID=0x00000002 Parent=0xBAD6048D SizeRef=1920,947 Split=X
-    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=383,947 Selected=0xBABDAE5E
-    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1535,947 Split=X
-      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=1149,947 Split=Y
-        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=1149,661 CentralNode=1 Selected=0xE601B12F
-        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=1149,284 Selected=0xEA83D666
-      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=384,947 Selected=0x36DC96AB
+DockSpace         ID=0xBAD6048D Window=0x079D3A04 Pos=8,53 Size=1520,755 Split=Y
+  DockNode        ID=0x00000001 Parent=0xBAD6048D SizeRef=1536,47 Selected=0x0C01D6D5
+  DockNode        ID=0x00000002 Parent=0xBAD6048D SizeRef=1536,744 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=306,744 Selected=0xBABDAE5E
+    DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=1228,744 Split=X
+      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=919,744 Split=Y
+        DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=919,519 CentralNode=1 Selected=0xE601B12F
+        DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=919,223 Selected=0x3DF3100E
+      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=307,744 Selected=0x36DC96AB
 
