Select object on scene

--- a/RTBEngineEditor/RTBEngineEditor.vcxproj
+++ b/RTBEngineEditor/RTBEngineEditor.vcxproj
@@ -107,6 +107,7 @@ xcopy /y /d /e /i "$(ProjectDir)RTBEngine_SDK\Default" "$(OutDir)Default"</Comma
     <ClCompile Include="Source\UI\Panels\ToolbarPanel.cpp" />
     <ClCompile Include="Source\UI\Panels\GameViewPanel.cpp" />
     <ClCompile Include="Source\Rendering\EditorGridRenderer.cpp" />
+    <ClCompile Include="Source\Utils\RaycastUtils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Build\BuildSystem.h" />
@@ -126,6 +127,7 @@ xcopy /y /d /e /i "$(ProjectDir)RTBEngine_SDK\Default" "$(OutDir)Default"</Comma
     <ClInclude Include="Source\UI\Panels\ToolbarPanel.h" />
     <ClInclude Include="Source\UI\Panels\GameViewPanel.h" />
     <ClInclude Include="Source\Rendering\EditorGridRenderer.h" />
+    <ClInclude Include="Source\Utils\RaycastUtils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
